# cs4287_cnn

./: .gitignore  ANALYSIS_GUIDE.md  QUICK_START.md  README.md  RESULTS_SUMMARY.md  config.json  create_summaries.py  main.py  notebook.ipynb  play_compare.py  pyproject.toml  results.py
data/archive/css-data/: data.yaml
runs/backup/saved/ppe_100_batch_8/: args.yaml  summary.txt
runs/backup/saved/ppe_100_dropout_0.2/: results.csv  summary.txt
runs/backup/saved/ppe_100_lr_0.001/: results.csv  summary.txt
runs/backup/saved/ppe_100_lr_0.02/: args.yaml  results.csv  summary.txt
runs/saved/ppe_100/: args.yaml  results.csv
runs/saved/ppe_100_batch_8/: args.yaml  results.csv  summary.json
runs/saved/ppe_100_dropout_0.2/: args.yaml  results.csv  summary.json
runs/saved/ppe_100_lr_0.001/: args.yaml  summary.json
runs/saved/ppe_100_lr_0.0012/: args.yaml  results.csv
runs/saved/ppe_100_lr_0.02/: summary.json
runs/saved/ppe_500/: args.yaml  results.csv
runs/saved_2/ppe_100/: args.yaml  results.csv
runs/saved_2/ppe_100_batch_8/: args.yaml  results.csv
runs/saved_2/ppe_100_dropout_0.2/: args.yaml  results.csv
runs/saved_2/ppe_100_lr_0.001/: args.yaml  results.csv
runs/saved_2/ppe_100_lr_0.02/: args.yaml  results.csv
runs/saved_2/ppe_100_no_mosaic/: args.yaml  results.csv
runs/saved_2/ppe_750_combined/: args.yaml
runs/train/ppe_detection2/: results.csv
sample/: Sample_Machinery.txt  Sample_Mask.txt  Sample_NoHardhat.txt  Sample_NoMask.txt  Sample_NoSafteyVest.txt  Sample_Person.txt  Sample_SafteyCone.txt  Sample_SafteyVest.txt  Sample_Vehicle.txt
(+8 files in other folders)
