[project]
name = "cs4287-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "bokeh>=3.8.0",
    "duckdb>=1.4.1",
    "loguru>=0.7.3",
    "marimo[mcp,recommended]>=0.17.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "polars[pyarrow]>=1.34.0",
    "prettytable>=3.16.0",
    "pytest>=8.4.2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "seaborn>=0.13.2",
    "sqlglot>=27.28.1",
    "ultralytics>=8.3.221",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
